add new members and make minor fixes

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 
     <section id="devit">
         <div class="row">           
-            <div class="col-lg-12 intro-text">
+            <div class="col-sm-12 intro-text">
                 <a href="http://devitconf.org" target="_blank"><img src="img/projects/devit-logo.svg" class="devit-logo"></a>
                 <div class="devit-text">
                     Our team proudly co-organizes DEVit, in collaboration with <a href="http://skgtech.io" target="_blank">SKGTech</a>
@@ -792,9 +792,9 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/special-thanks/liakos1.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/liakos1.jpg" class="img-responsive img-circle" alt="">
                         <h4 class="members-names">Konstantinos Liakos</h4>
                         <!-- <p class="text-muted">Konstantinos is an excellent accountant and is our personal advisor on such issues, for which we are thankful - even though sometimes we are stubborn and don't listen to his well-stated advice.</p> -->
                         <ul class="list-inline social-buttons">
@@ -802,6 +802,106 @@
                         </ul>
                     </div>
                 </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
+                        <h4 class="members-names">Zoe Chalvatzi</h4>
+                        <!-- <ul class="list-inline social-buttons">
+                            <li><a href="" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-github-square"></i></a></li>
+                        </ul> -->
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
+                        <h4 class="members-names">Dimitra Charalambidou</h4>
+                        <!-- <ul class="list-inline social-buttons">
+                            <li><a href="" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-github-square"></i></a></li>
+                        </ul> -->
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
+                        <h4 class="members-names">Philippos Karpou</h4>
+                        <!-- <ul class="list-inline social-buttons">
+                            <li><a href="" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-github-square"></i></a></li>
+                        </ul> -->
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
+                        <h4 class="members-names">Themis Zaimidis</h4>
+                        <!-- <ul class="list-inline social-buttons">
+                            <li><a href="" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-github-square"></i></a></li>
+                        </ul> -->
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
+                        <h4 class="members-names">Arnold Spyros</h4>
+                        <!-- <ul class="list-inline social-buttons">
+                            <li><a href="" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-github-square"></i></a></li>
+                        </ul> -->
+                    </div>
+                </div>                            
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
+                        <h4 class="members-names">Eva Perontsi</h4>
+                        <!-- <ul class="list-inline social-buttons">
+                            <li><a href="" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-github-square"></i></a></li>
+                        </ul> -->
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
+                        <h4 class="members-names">Georgia Tsoupra</h4>
+                        <!-- <ul class="list-inline social-buttons">
+                            <li><a href="" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-github-square"></i></a></li>
+                        </ul> -->
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
+                        <h4 class="members-names">Dimitra Afrati</h4>
+                        <!-- <ul class="list-inline social-buttons">
+                            <li><a href="" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="" target="_blank"><i class="fa fa-github-square"></i></a></li>
+                        </ul> -->
+                    </div>
+                </div>                            
             </div>
         </div>
     </section>
