--- a/index.html
+++ b/index.html
@@ -880,14 +880,14 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/tsoupra1.jpg" class="img-responsive img-circle" alt="">
                         <h4 class="members-names">Georgia Tsoupra</h4>
-                        <!-- <ul class="list-inline social-buttons">
-                            <li><a href="" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
-                            <li><a href="" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
-                            <li><a href="" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
-                            <li><a href="" target="_blank"><i class="fa fa-github-square"></i></a></li>
-                        </ul> -->
+                        <ul class="list-inline social-buttons">
+                            <li><a href="https://twitter.com/stumblerg" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="https://www.facebook.com/georgia.tsoupra" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/georgiatsoupra" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="https://github.com/gtsoupra" target="_blank"><i class="fa fa-github-square"></i></a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-sm-3">
