add info for some members

--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/dimix1.jpg" class="img-responsive img-circle" alt="">
                         <h4 class="members-names">Dimitra Charalambidou</h4>
                         <!-- <ul class="list-inline social-buttons">
                             <li><a href="" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
@@ -826,6 +826,20 @@
                             <li><a href="" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
                             <li><a href="" target="_blank"><i class="fa fa-github-square"></i></a></li>
                         </ul> -->
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/sophie1.jpg" class="img-responsive img-circle" alt="">
+                        <h4 class="members-names">Sophie Papadopoulou</h4>
+                        <!--<p class="text-muted">
+                            PhD adventurer on Citizen Science and crowdsourcing technologies’ HCI, UX enthusiast, full time advocate of making the world suck less.
+                        </p>-->
+                        <ul class="list-inline social-buttons">
+                            <li><a href="https://twitter.com/sophehUK" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/sopheh/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="https://www.facebook.com/sophie.papadopouloumx" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                            <li><a href="https://github.com/sopheh" target="_blank"><i class="fa fa-github-square"></i></a></li>
                     </div>
                 </div>
                 <div class="col-sm-3">
@@ -851,21 +865,22 @@
                             <li><a href="" target="_blank"><i class="fa fa-github-square"></i></a></li>
                         </ul> -->
                     </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="team-member">
-                        <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
-                        <h4 class="members-names">Arnold Spyros</h4>
-                        <!-- <ul class="list-inline social-buttons">
-                            <li><a href="" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
-                            <li><a href="" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
-                            <li><a href="" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
-                            <li><a href="" target="_blank"><i class="fa fa-github-square"></i></a></li>
-                        </ul> -->
-                    </div>
-                </div>                            
+                </div>                         
             </div>
             <div class="row">
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/arnold1.jpg" class="img-responsive img-circle" alt="">
+                        <h4 class="members-names">Arnolnt Spyros</h4>
+                        <!--<p class="text-muted">
+                            Arnolnt Spyros studιes Engineering of Computer Science at  the Alexander Technological Educational Institute of Thessaloniki. His area of interests are: OOP, OOD, Game Development, Security
+                        </p>-->
+                        <ul class="list-inline social-buttons">
+                            <li><a href="https://www.linkedin.com/in/arnolnt-spyros" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="https://github.com/ArnolntSpyros" target="_blank"><i class="fa fa-github-square"></i></a></li>
+                        </ul>
+                    </div>
+                </div>   
                 <div class="col-sm-3">
                     <div class="team-member">
                         <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
