add info for some members

--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
                 <div class="col-sm-3">
                     <div class="team-member">
                         <img src="img/team/sophie1.jpg" class="img-responsive img-circle" alt="">
-                        <h4 class="members-names">Sophie Papadopoulou</h4>
+                        <h4 class="members-names"> <a href="https://sopheh.io" target="_blank">Sophie Papadopoulou</a></h4>
                         <!--<p class="text-muted">
                             PhD adventurer on Citizen Science and crowdsourcing technologies’ HCI, UX enthusiast, full time advocate of making the world suck less.
                         </p>-->
