Change linkedin link kst

--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
                         <ul class="list-inline social-buttons">
                             <li><a href="https://twitter.com/george_kst" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
                             <li><a href="https://www.facebook.com/george.kst" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
-                            <li><a href="https://gr.linkedin.com/in/george-kostopoulos" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="https://gr.linkedin.com/in/georgekst" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
                             <li><a href="https://github.com/georgekst" target="_blank"><i class="fa fa-github-square"></i></a></li>
                         </ul>
                     </div>
