--- a/index.html
+++ b/index.html
@@ -830,16 +830,15 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/sophie1.jpg" class="img-responsive img-circle" alt="">
-                        <h4 class="members-names"> <a href="https://sopheh.io" target="_blank">Sophie Papadopoulou</a></h4>
+                        <img src="img/team/template.jpg" class="img-responsive img-circle" alt="">
+                        <h4 class="members-names">Alex Papadopoulos</h4>
                         <!--<p class="text-muted">
                             PhD adventurer on Citizen Science and crowdsourcing technologies’ HCI, UX enthusiast, full time advocate of making the world suck less.
                         </p>-->
                         <ul class="list-inline social-buttons">
-                            <li><a href="https://twitter.com/sophehUK" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/sopheh/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
-                            <li><a href="https://www.facebook.com/sophie.papadopouloumx" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
-                            <li><a href="https://github.com/sopheh" target="_blank"><i class="fa fa-github-square"></i></a></li>
+                            <li><a href="https://twitter.com/imalexnowUK" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/imalexnow/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="https://www.facebook.com/imalexnow" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
                     </div>
                 </div>
                 <div class="col-sm-3">
